some more hacking on inappbrowser

--- a/lib/client/ui/plugins/browser/overlay.html
+++ b/lib/client/ui/plugins/browser/overlay.html
@@ -19,5 +19,10 @@
  *
 -->
 <section id="inappbrowser" class="overlay-browser">
-    This is the InAppBrowser!
+    <h2>InAppBrowser Emulation</h2>
+    It is like a browser, only it is all up in your app
+    <iframe id="browser" src="" frameborder="0"></iframe>
+    <button id="close-browser" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only small-button">
+        <span class="ui-button-text">Close</span>
+    </button>
 </section>
