inapp browser emulation

--- a/lib/client/ui/plugins/browser/overlay.html
+++ b/lib/client/ui/plugins/browser/overlay.html
@@ -21,8 +21,13 @@
 <section id="inappbrowser" class="overlay-browser">
     <h2>InAppBrowser Emulation</h2>
     It is like a browser, only it is all up in your app
-    <iframe id="browser" src="" frameborder="0"></iframe>
-    <button id="close-browser" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only small-button">
+    <h3>URL:</h3>
+    <blockquote id="browser-url">http://www.google.com</blockquote> 
+    <h3>TARGET:</h3>
+    <blockquote id="browser-target">_blank</blockquote>
+    <h3>OPTIONS:</h3>
+    <blockquote id="browser-options">{}</blockquote>
+    <button id="browser-close" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only small-button">
         <span class="ui-button-text">Close</span>
     </button>
 </section>
