some more inappbrowser support and tests

--- a/lib/client/ui/plugins/browser/overlay.html
+++ b/lib/client/ui/plugins/browser/overlay.html
@@ -27,6 +27,10 @@
     <blockquote id="browser-target">_blank</blockquote>
     <h3>OPTIONS:</h3>
     <blockquote id="browser-options">{}</blockquote>
+    <h3 id="browser-inject-js-header">INJECTED JAVASCRIPT:</h3>
+    <pre id="browser-inject-js"></pre>
+    <h3 id="browser-inject-css-header">INJECTED CSS:</h3>
+    <pre id="browser-inject-css"></pre>
     <button id="browser-close" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only small-button">
         <span class="ui-button-text">Close</span>
     </button>
