Updates URLs for documentation and download to the Apache Incubator sites

--- a/assets/client/index.html
+++ b/assets/client/index.html
@@ -86,7 +86,7 @@
                         <span class="ui-button-text">FIRE!!</span>
                     </button>
 
-                    <p>If you want to help make things better, drop us a line at <a style="color: #F0F0F0" href="https://github.com/blackberry/Ripple-UI/issues">github</a></p>
+                    <p>If you want to help make things better, drop us a line in <a style="color: #F0F0F0" href="https://issues.apache.org/jira/browse/ripple">JIRA</a></p>
                 </section>
                 <section class="error-hippo"></section>
             </section>
