--- a/assets/server/index.html
+++ b/assets/server/index.html
@@ -49,16 +49,12 @@
                     <h2>You can get Ripple at any one of these spots:</h2>
             </section>
 
-            <section id="ripple-rim" class="warning box">
-                <a href="https://developer.blackberry.com/html5/download/" class="bt">Be Bold!</a>
-                <p>Get Blackberry's distribution of the Ripple Emulator.</p>
-            </section>
             <section id="ripple-chrome-store" class="warning box">
                 <a href="https://chrome.google.com/webstore/detail/geelfhphabnejjhdalkjhgipohgpdnoc" class="bt">Be Shiny!</a>
                 <p>Get the Google Chrome Store distribution of the Ripple Emulator.</p>
             </section>
             <section id="ripple-open-source" class="warning box">
-                <a href="http://github.com/blackberry/Ripple-UI" class="bt">Bat Country!!</a>
+                <a href="http://ripple.incubator.apache.org/#download" class="bt">Bat Country!!</a>
                 <p>Are you hardcore?!?! Clone Ripple from our open source project and get cracking.</p>
             </section>
         </section>
