Change the appearance as per review comments.

--- a/lib/client/ui/plugins/accelerometer/panel.html
+++ b/lib/client/ui/plugins/accelerometer/panel.html
@@ -36,42 +36,36 @@
 
             <table class="panel-table">
                 <tr>
-                    <td colspan="3" style="text-align: center"> 
-                        <small><em>
-                            Click and drag with the mouse to manipulate the device. <br/>
+                    <td colspan="2" style="text-align: center"> 
+                        <em>
+                            Click and drag with the mouse to manipulate the device.<br/>
                             Hold the Shift key to modify 'alpha'
-                        </em></small>
+                        </em>
                     </td>
                 </tr>
                 <tr>
                     <td><label class="ui-text-label" for="accelerometer-x">xAxis:</label></td>
-                    <td><span id="accelerometer-x"></span></td>
-                    <td>m/s&sup2;</td>
+                    <td><span id="accelerometer-x" style="font-weight: bold;"></span>&nbsp;m/s&sup2;</td>
                 </tr>
                 <tr>
                     <td><label class="ui-text-label" for="accelerometer-y">yAxis:</label></td>
-                    <td><span id="accelerometer-y"></span></td>
-                    <td>m/s&sup2;</td>
+                    <td><span id="accelerometer-y" style="font-weight: bold;"></span>&nbsp;m/s&sup2;</td>
                 </tr>
                 <tr>
                     <td><label class="ui-text-label" for="accelerometer-z">zAxis:</label></td>
-                    <td><span id="accelerometer-z"></span></td>
-                    <td>m/s&sup2;</td>
+                    <td><span id="accelerometer-z" style="font-weight: bold;"></span>&nbsp;m/s&sup2;</td>
                 </tr>
                 <tr>
                     <td><label class="ui-text-label" for="accelerometer-alpha">alpha:</label></td>
-                    <td><span id="accelerometer-alpha"></span></td>
-                    <td>&deg;</td>
+                    <td><span id="accelerometer-alpha" style="font-weight: bold;"></span>&nbsp;&deg;</td>
                 </tr>
                 <tr>
                     <td><label class="ui-text-label" for="accelerometer-beta">beta:</label></td>
-                    <td><span id="accelerometer-beta"></span></td>
-                    <td>&deg;</td>
+                    <td><span id="accelerometer-beta" style="font-weight: bold;"></span>&nbsp;&deg;</td>
                 </tr>
                 <tr>
                     <td><label class="ui-text-label" for="accelerometer-gamma">gamma:</label></td>
-                    <td><span id="accelerometer-gamma"></span></td>
-                    <td>&deg;</td>
+                    <td><span id="accelerometer-gamma" style="font-weight: bold;"></span>&nbsp;&deg;</td>
                 </tr>
             </table>
         </section>
